[gd_scene load_steps=2 format=3 uid="uid://df8jw6ky7qp70"]

[ext_resource type="Script" uid="uid://cktf3qpb0j6jv" path="res://Scripts/pause_menu.gd" id="1_51xyr"]

[node name="pause_menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51xyr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.121569, 0.784314)

[node name="paused_segment" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -75.0
offset_right = 95.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="paused_segment"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause Menu"

[node name="resume_button" type="Button" parent="paused_segment"]
layout_mode = 2
text = "Resume Game"

[node name="settings_button" type="Button" parent="paused_segment"]
layout_mode = 2
text = "Settings"

[node name="quit_button" type="Button" parent="paused_segment"]
layout_mode = 2
text = "Quit Game"

[node name="setting_menu" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -63.5
offset_right = 62.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Label" parent="setting_menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Label" type="Label" parent="setting_menu"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="setting_menu"]
layout_mode = 2

[node name="back_button" type="Button" parent="setting_menu"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="paused_segment/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="paused_segment/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="paused_segment/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="setting_menu/back_button" to="." method="_on_back_button_pressed"]
